[package]
name = 'sakura'
version = '0.4.0'
edition = '2021'

[dependencies]
chrono = { version = '0.4.10', default-features = false, features = ['clock'] }
dotenv = '0.15.0'
regex = '1.5.4'
reqwest = { version = '0.11', features = ['json'] }
serde = '1.0.130'
serenity = { version = '0.10.9', default-features = false, features = ['client', 'gateway', 'rustls_backend', 'model', 'voice', 'cache'] }
tokio = { version = '1.0', features = ['macros', 'rt-multi-thread'] }