[package]
name = 'sakura'
version = '0.5.0'
edition = '2021'

[dependencies]
actix-web = '3'
chrono = { version = '0.4.19', default-features = false, features = ['clock'] }
dotenv = '0.15.0'
lavalink-rs = { git = "https://gitlab.com/vicky5124/lavalink-rs/", branch = "master", default-features = false, features = ["rustls", "serenity", "songbird", "normal-log"] }
regex = '1.5.4'
reqwest = { version = '0.11', features = ['json'] }
serde = '1.0.130'
serenity = { version = '0.10.10', default-features = false, features = ['client', 'gateway', 'rustls_backend', 'model', 'voice', 'cache'] }
songbird = '0.2.2'
tokio = { version = '1.0', features = ['macros', 'rt-multi-thread'] }